// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple style factories createNumericStyler works correctly (returns unit) 1`] = `
Object {
  "test": "1px",
}
`;

exports[`simple style factories createNumericStyler works correctly (returns unit) 2`] = `Object {}`;

exports[`simple style factories createStringStyler works correctly (returns string) 1`] = `
Object {
  "test": 1,
}
`;

exports[`simple style factories createStringStyler works correctly (returns string) 2`] = `Object {}`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (with default responsive) 1`] = `
Object {
  "test": 1,
}
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (with default responsive) 2`] = `
Object {
  "test": "1",
}
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (with default responsive) 3`] = `
Object {
  "test": "2",
}
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (with default responsive) 4`] = `
Object {
  "test": "3",
}
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (with default responsive) 5`] = `
Object {
  "test": "2",
}
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (with default simple) 1`] = `
Object {
  "test": 1,
}
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (with default simple) 2`] = `
Object {
  "test": "1",
}
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (with default simple) 3`] = `
Object {
  "test": "1",
}
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (with default simple) 4`] = `
Object {
  "test": "3",
}
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (with default simple) 5`] = `
Object {
  "test": "1",
}
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (without default) 1`] = `
Object {
  "test": 1,
}
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (without default) 2`] = `Object {}`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (without default) 3`] = `
Object {
  "test": "1",
}
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (without default) 4`] = `
Object {
  "test": "3",
}
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (without default) 5`] = `Object {}`;

exports[`simple style factories createStyler takes the value from default responsive value if is not specified in prop (with default) 1`] = `
Object {
  "test": 1,
}
`;
